Added file name to title when file loaded